objects/nFORCE__Kpi_Update__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Data_Changes__c</fullName>
        <label>Data Changes</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Executing_User_Hash__c</fullName>
        <label>Executing User Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Executing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executing User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Executing Users</relationshipLabel>
        <relationshipName>Executing_Users_Telemetry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__SObject_Type__c</fullName>
        <label>sObject Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KPI Update</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>